# geoportal

./: .gitignore  LICENSE  README.md  data.xlsx  helper.py  index.html.jinja  main.py  pyproject.toml  requirements.txt  sheet_types.py
sample/: data_1.xlsx
